Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12598

osd_ios_lf_fill() returns 0 on some error paths.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • Lustre servers running ldiskfs
    • 3
    • 9223372036854775807

      While working on LU-12137 I found that osd_ios_lf_fill() behaves differently than the other olm_filldir() callbacks in that ignores the fails returned by osd_ios_lookup_one_len(). Is this proper behavior or was this error handling path missed?

            simmonsja James A Simmons
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: